Feat and refactor: add event listener to add todo btn and form, change params of addProject() and addTodo()
Originally, addProject and addTodo takes a couple of params and initialize a new Project/Todo with those params and then add it into the list. After the change, they both take a Project/Todo object instead of initializing it inside to avoid confusion.

--- a/src/style.css
+++ b/src/style.css
@@ -40,10 +40,15 @@ main {
   background-color: aquamarine;
 }
 
-#project-form {
+#project-form,
+#todo-form {
   display: none;
 }
 
 ul {
   list-style: none;
+}
+
+input {
+  display: block;
 }
