--- a/src/style.css
+++ b/src/style.css
@@ -461,7 +461,14 @@ footer {
   color: var(--dark);
 }
 
-.material-symbols-outlined.proj-main-icons,
-.material-symbols-outlined.proj-icons {
+.material-symbols-outlined {
   font-variation-settings: 'FILL' 0, 'wght' 200, 'GRAD' 0, 'opsz' 50;
+}
+
+.material-symbols-outlined .proj-icons {
+  width: 1.5rem;
+}
+
+.material-symbols-outlined .todo-icons {
+  width: 1rem;
 }
