--- a/src/style.css
+++ b/src/style.css
@@ -59,8 +59,6 @@ main {
 }
 
 #project-btns-container {
-  position: sticky;
-  top: 0;
   display: flex;
   align-items: center;
   color: white;
@@ -73,6 +71,12 @@ main {
   padding: 0 0.2rem;
   margin: 0 0.7rem 0 0.7rem;
   border-bottom: 0.1rem solid white;
+}
+
+#sidebar.open header {
+  position: sticky;
+  top: 0;
+  background-color: var(--blue);
 }
 
 #sidebar.close #project-btns-container {
